# scc

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  example.rgraph  note_cmake.txt
scc/: CMakeLists.txt  dfs.h  dgraph2rgraph.cpp  fibonacci.cpp  graph_generator.cpp  graph_reader.cpp  graph_reader.hpp  graph_writer.cpp  graph_writer.hpp  scc.cpp  scc.h  scc_com.hpp  scc_fleischer.cpp  scc_kosaraju.cpp  scc_kosaraju.hpp  scc_pivots.cpp  scc_tasks.cpp  test_enh.cpp  test_trim1.cpp  test_trim2.cpp  test_wcc.cpp
